[package]
name = "cfm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
which = "8"
shellexpand = "3"
unicode-width = "0.2"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi"] }
junction = "1"
