[package]
name = "cfm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
tabled = "0.20.0"
thiserror = "2.0.18"
toml = "1"
which = "8"

[target.'cfg(windows)'.dependencies]
junction = "1"
winapi = { version = "0.3", features = ["fileapi", "winbase"] }
